k8-manifests-webapp/ingressDemp-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    creationTimestamp: "2024-03-21T06:45:38Z"
    generation: 1
    name: ingress-wear-watch
    namespace: app-space
    resourceVersion: "751"
    uid: 35908082-50ad-4f84-a264-48ef6772bd3b
  spec:
    rules:
    - http:
        paths:
        - backend:
            service:
              name: wear-service
              port:
                number: 8080
          path: /wear
          pathType: Prefix
        - backend:
            service:
              name: video-service
              port:
                number: 8080
          path: /watch
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.102.207.79
kind: List
metadata:
  resourceVersion: ""
